Cambios en la rama develop

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-Hola, esta es una prueba adicional
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Pruebatitulo</title>
+    </head>
+    <body>
+<h1>Hola, esta es una prueba adicional</h1>
 
-Quiero ser un excelente programador. 
-
-
+<h2><p>Quiero ser un excelente programador.</p></h2> 
+    </body>
+</html>
